# FileForge-Desktop

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/pdf/: mod.rs
src/components/editor/: CodeMirrorEditor.tsx  EditorToolbar.tsx  codemirror-setup.ts  search-panel.ts
src/components/preview/: MarkdownPreview.tsx  PreviewEmptyState.tsx
src/components/settings/: AboutPanel.tsx  ChangelogPanel.tsx  ColorSchemePicker.tsx  GeneralSettingsPanel.tsx  PreferencesDialog.tsx  SettingsDialog.tsx  ShortcutsPanel.tsx
src/components/shell/: ActivityToolbar.tsx  EditorLayout.tsx  ErrorBoundary.tsx  HelpMenu.tsx  RenameDocumentDialog.tsx  StatusBar.tsx  TitleBar.tsx  UnsavedChangesDialog.tsx  UpdateAvailableDialog.tsx  UpdateHeaderProgress.tsx  WorkspacePanel.tsx  toolbar-popover.tsx
src/components/ui/: button.tsx  dialog.tsx  label.tsx  select.tsx  sonner.tsx
src/data/: changelog.ts
src/hooks/: use-debounced-value.ts  use-document-stats.ts  use-update-check.ts
src/lib/: app-metadata.ts  changelog.ts  constants.ts  editor-commands.ts  file-upload.ts  keyboard.ts  shortcuts.ts
src/lib/converters/: markdown-to-html.test.ts  (+1 more)
src/stores/: document-store.ts  editor-store.ts  settings-store.ts
src/styles/: editor.css  globals.css  preview.css  titlebar.css
src/themes/: index.ts
(+8 files in other folders)
